// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowButton DOM rendering renders correctly left variant 1`] = `
<div
  className="left"
>
  <div
    className="shadow shadowHover"
  />
  <button
    className="icon"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <ArrowSvg />
  </button>
</div>
`;

exports[`ArrowButton DOM rendering renders correctly right variant 1`] = `
<div
  className="right"
>
  <div
    className="shadow shadowHover"
  />
  <button
    className="icon"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <ArrowSvg />
  </button>
</div>
`;

exports[`ArrowButton DOM rendering renders correctly when disabled 1`] = `
<div
  className="right"
>
  <div
    className="shadow"
  />
  <button
    className="icon"
    disabled={true}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <ArrowSvg />
  </button>
</div>
`;
